important permission fixes

--- a/templates/base.html
+++ b/templates/base.html
@@ -73,7 +73,7 @@
                                         <div class="collapsible-body grey lighten-4 grey-text text-darken-4">
                                             <ul>
                                                 {% if user.is_admin %}<li><a class="waves-effect waves-light" href="{% url 'useraccounts' %}"><i class="material-icons light-blue-text text-darken-1">group</i>Useraccounts</a></li>{% endif %}
-                                                <li><a class="waves-effect waves-light" href="{% url 'qualifications' %}"><i class="material-icons light-blue-text text-darken-1">label</i>Qualifications</a></li>
+                                                {% if user.is_admin %}<li><a class="waves-effect waves-light" href="{% url 'qualifications' %}"><i class="material-icons light-blue-text text-darken-1">label</i>Qualifications</a></li>{% endif %}
                                                 <li><a class="waves-effect waves-light" href="{% url 'departments' %}"><i class="material-icons light-blue-text text-darken-1">view_list</i>Departments</a></li>
                                                 <li><a class="waves-effect waves-light" href="{% url 'demand' %}"><i class="material-icons light-blue-text text-darken-1">date_range</i>Personnel demand</a></li>
                                                 {% if user.is_admin %}<li><a class="waves-effect waves-light" href="{% url 'datamanagement' %}"><i class="material-icons light-blue-text text-darken-1">cloud</i>Data management</a></li>{% endif %}
@@ -96,34 +96,31 @@
                                             <ul>
                                                 <li><a class="waves-effect waves-light" href="{% url 'shifts' %}"><i class="material-icons light-blue-text text-darken-1">view_list</i>Shifts</a></li>
                                                 <li><a class="waves-effect waves-light" href="{% url 'shiftplan' %}"><i class="material-icons light-blue-text text-darken-1">event_note</i>Shiftplan</a></li>
-                                                {% if user.is_authorized %}<li><a class="waves-effect waves-light" href="{% url 'work_hours' %}"><i class="material-icons light-blue-text text-darken-1">event</i>Work hours</a></li>{% endif %}
+                                                <li><a class="waves-effect waves-light" href="{% url 'work_hours' %}"><i class="material-icons light-blue-text text-darken-1">event</i>Work hours</a></li>
                                                 <li><a class="waves-effect waves-light" href="{% url 'availabilities' %}"><i class="material-icons light-blue-text text-darken-1">event_available</i>Availabilities</a></li>
                                                 <li><a class="waves-effect waves-light" href="{% url 'wishes' %}"><i class="material-icons light-blue-text text-darken-1">event_note</i>Wishes</a></li>
-                                                {% if user.is_authorized %}<li><a class="waves-effect waves-light" href="{% url 'shift_templates' %}"><i class="material-icons light-blue-text text-darken-1">event</i>Shift templates</a></li>{% endif %}
-                                                {% if user.is_authorized %}<li><a class="waves-effect waves-light" href="{% url 'day_templates' %}"><i class="material-icons light-blue-text text-darken-1">event</i>Day templates</a></li>{% endif %}
+                                                <li><a class="waves-effect waves-light" href="{% url 'shift_templates' %}"><i class="material-icons light-blue-text text-darken-1">event</i>Shift templates</a></li>
+                                                <li><a class="waves-effect waves-light" href="{% url 'day_templates' %}"><i class="material-icons light-blue-text text-darken-1">event</i>Day templates</a></li>
                                             </ul>
                                         </div>
                                     </li>
                                 {% elif user.role == 'E' %}
                                     <li>
-                                        <div class="collapsible-header"><i class="material-icons amber-text text-darken-1">event</i>Shift Management</div>
+                                        <div class="collapsible-header"><i class="material-icons amber-text text-darken-1">group</i>Employee Management</div>
                                         <div class="collapsible-body grey lighten-4 grey-text text-darken-4">
                                             <ul>
-                                                <li><a class="waves-effect waves-light"><i class="material-icons light-blue-text text-darken-1">view_list</i>Shifts</a></li>
-                                                <li><a class="waves-effect waves-light" href="{% url 'shiftplan' %}"><i class="material-icons light-blue-text text-darken-1">event_note</i>Shiftplan</a></li>
                                                 <li><a class="waves-effect waves-light" href="{% url 'own_availabilities' %}"><i class="material-icons light-blue-text text-darken-1">event_available</i>Availabilities</a></li>
                                                 <li><a class="waves-effect waves-light" href="{% url 'own_wishes' %}"><i class="material-icons light-blue-text text-darken-1">event_note</i>Wishes</a></li>
-                                                <li><a class="waves-effect waves-light" href="{% url 'own_absences' %}"><i class="material-icons light-blue-text text-darken-1">event_busy</i>Absences</a></li>
-                                                <li><a class="waves-effect waves-light" href="{% url 'own_holidays' %}"><i class="material-icons light-blue-text text-darken-1">flight_takeoff</i>Holidays</a></li>
                                             </ul>
                                         </div>
                                     </li>
                                     <li>
-                                        <div class="collapsible-header"><i class="material-icons amber-text text-darken-1">person</i>My account</div>
+                                        <div class="collapsible-header"><i class="material-icons amber-text text-darken-1">event</i>Shift Management</div>
                                         <div class="collapsible-body grey lighten-4 grey-text text-darken-4">
                                             <ul>
-                                                <li><a class="waves-effect waves-light" href="{% url 'edit_basedata' %}"><i class="material-icons light-blue-text text-darken-1">settings</i>Base data</a></li>
-                                                <li><a class="waves-effect waves-light" href="{% url 'change_password' %}"><i class="material-icons light-blue-text text-darken-1">vpn_key</i>Change password</a></li>
+                                                <li><a class="waves-effect waves-light" href="{% url 'shiftplan' %}"><i class="material-icons light-blue-text text-darken-1">event_note</i>Shiftplan</a></li>
+                                                <li><a class="waves-effect waves-light" href="{% url 'own_absences' %}"><i class="material-icons light-blue-text text-darken-1">event_busy</i>Absences</a></li>
+                                                <li><a class="waves-effect waves-light" href="{% url 'own_holidays' %}"><i class="material-icons light-blue-text text-darken-1">flight_takeoff</i>Holidays</a></li>
                                             </ul>
                                         </div>
                                     </li>
@@ -166,10 +163,12 @@
             {% block content %}
                 <h1 class="light-blue-text text-darken-1">Welcome</h1>
                 <div class="row">
-                    <div class="col s12 m6">
+                    <div class="col s12 m8">
                         <div class="card light-blue darken-1">
                             <div class="card-content white-text">
-                                <p>This page is a prototype of a shift planning tool.</p>
+                                <p>This application is a working prototype of a shift planning Web-Application</p>
+                                <p>Developed by Florian Kate as a project of the Bachelor Thesis in Media Informatics</p>
+                                <p>Please log in to start</p>
                             </div>
                         </div>
                     </div>
