--- a/templates/demand/create_demand.html
+++ b/templates/demand/create_demand.html
@@ -2,7 +2,7 @@
 {% block title %}ShiftManager - Create demand{% endblock %}
 
 {% block content %}
-    {% if user.is_admin %}
+    {% if user.is_authorized %}
         <h3 class="light-blue-text text-darken-1">Create demand</h3>
         <a class="waves-effect waves-light btn amber darken-1 right" href="{% url 'demand' %}"><i class="material-icons left">keyboard_backspace</i>Back</a><br><br>
         <div class="card">
