--- a/templates/demand/demand_list.html
+++ b/templates/demand/demand_list.html
@@ -39,7 +39,7 @@
             </li>
         </ul>
 
-        {% if user.is_admin %}<a class="waves-effect waves-light btn light-blue darken-1 right" href="{% url 'create_demand' %}"><i class="material-icons left">add</i>Create demand</a><br><br>{% endif %}
+        <a class="waves-effect waves-light btn light-blue darken-1 right" href="{% url 'create_demand' %}"><i class="material-icons left">add</i>Create demand</a><br><br>
         <div class="card">
             <div class="card-content">
                 <table class="striped highlight responsive-table">
