--- a/templates/wishes/own_wishes.html
+++ b/templates/wishes/own_wishes.html
@@ -4,6 +4,42 @@
 {% block content %}
     {% if user.is_authenticated %}
         <h3 class="light-blue-text text-darken-1">My shift wishes</h3>
+        <ul class="collapsible">
+            <li {% if search %}class="active"{% endif %}>
+                <div class="collapsible-header grey lighten-3"><i class="material-icons left">search</i>Search</div>
+                <div class="collapsible-body grey lighten-5">
+                    <form method="POST" action="{% url 'own_wishes' %}">
+                        {% csrf_token %}
+                        <div class="row">
+                            <div class="input-field col s6 m4">
+                                <i class="material-icons prefix">event_calendar</i>
+                                <input id="id_filter_date" name="filter_date" type="text" {% if data.filter_date %}value="{{ data.filter_date }}"{% endif %} class="datepicker grey-text text-darken-4">
+                                <label for="id_filter_date">Filter date (week)</label>
+                            </div>
+                            <div class="input-field col s6 m4">
+                                <i class="material-icons prefix">event_calendar</i>
+                                <select name="filter_tendency">
+                                    {% for tendency in form.filter_tendency %}
+                                        <option {% if data.filter_tendency == tendency.data.value %}selected{% endif %} value="{{ tendency.data.value }}">{{ tendency.data.label }}</option>
+                                    {% endfor %}
+                                </select>
+                                <label>Tendency</label>
+                            </div>
+                            <div class="input-field col s6 m4">
+                                <i class="material-icons prefix">search</i>
+                                <input id="id_keyword" type="search" name="keyword" {% if data.keyword %}value="{{ data.keyword }}"{% endif %}>
+                                <label for="id_keyword">Keyword</label>
+                            </div>
+                        </div>
+                        <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">search</i>Search</button>
+                        {% if search %}
+                            <a class="waves-effect waves-light btn-flat red-text text-darken-1" href="{% url 'own_wishes' %}"><i class="material-icons left">clear</i>Clear</a>
+                        {% endif %}
+                    </form>
+                </div>
+            </li>
+        </ul>
+
         <a class="waves-effect waves-light btn light-blue darken-1 right" href="{% url 'add_own_wish' %}"><i class="material-icons left">add</i>Create wish</a><br><br>
         <div class="card">
             <div class="card-content">
